force-app/main/default/objects/CommunityOS_Settings__c/CommunityOS_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>CommunityOS switches: AI provider and model, Square location and visit sync status.</description>
    <label>CommunityOS Settings</label>
</CustomObject>