force-app/main/default/objects/CommunityOS_Settings__c/fields/Allow_Live_Writes__c.field-meta.xml
<CustomField>
    <fullName>Allow_Live_Writes__c</fullName>
    <description>When off (sandbox), booking changes and orders stay as drafts because they sync to live Square.</description>
    <label>Allow Live Writes</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>