force-app/main/default/objects/CommunityOS_Settings__c/fields/Daily_AI_Call_Limit__c.field-meta.xml
<CustomField>
    <fullName>Daily_AI_Call_Limit__c</fullName>
    <description>Maximum real-model calls per day for the whole org. Blank means 200. Rules mode is never limited.</description>
    <label>Daily AI Call Limit</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>