force-app/main/default/objects/CommunityOS_Settings__c/fields/Input_Cost_Per_MTok__c.field-meta.xml
<CustomField>
    <fullName>Input_Cost_Per_MTok__c</fullName>
    <description>USD per million input tokens, for cost estimates. Sonnet 5: 2.</description>
    <label>Input Cost per MTok (USD)</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>