force-app/main/default/objects/CommunityOS_Settings__c/fields/LLM_Model__c.field-meta.xml
<CustomField>
    <fullName>LLM_Model__c</fullName>
    <label>LLM Model</label>
    <description>Claude model id, e.g. claude-sonnet-5</description>
    <type>Text</type>
    <length>80</length>
</CustomField>