force-app/main/default/objects/CommunityOS_Settings__c/fields/LLM_Provider__c.field-meta.xml
<CustomField>
    <fullName>LLM_Provider__c</fullName>
    <label>LLM Provider</label>
    <description>mock (default, no network) or claude</description>
    <type>Text</type>
    <length>20</length>
</CustomField>