force-app/main/default/objects/CommunityOS_Settings__c/fields/Monthly_AI_Budget_USD__c.field-meta.xml
<CustomField>
    <fullName>Monthly_AI_Budget_USD__c</fullName>
    <description>Estimated USD the org may spend on real-model calls per calendar month. Blank means no monthly cap. When reached, AI features pause until the 1st.</description>
    <label>Monthly AI Budget (USD)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>