force-app/main/default/objects/CommunityOS_Settings__c/fields/Output_Cost_Per_MTok__c.field-meta.xml
<CustomField>
    <fullName>Output_Cost_Per_MTok__c</fullName>
    <description>USD per million output tokens, for cost estimates. Sonnet 5: 10.</description>
    <label>Output Cost per MTok (USD)</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>