force-app/main/default/objects/CommunityOS_Settings__c/fields/Square_Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>Square_Last_Sync__c</fullName>
    <description>When the Square visit sync last finished.</description>
    <label>Square Last Sync</label>
    <type>DateTime</type>
</CustomField>