force-app/main/default/objects/CommunityOS_Settings__c/fields/Square_Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Square_Location_Id__c</fullName>
    <description>Square location for the live visit summary.</description>
    <label>Square Location Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>