force-app/main/default/objects/CommunityOS_Settings__c/fields/Square_Sync_Days__c.field-meta.xml
<CustomField>
    <fullName>Square_Sync_Days__c</fullName>
    <description>How many days back the nightly Square visit sync reads. Default 2.</description>
    <label>Square Sync Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>