force-app/main/default/objects/CommunityOS_Settings__c/fields/Square_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Square_Sync_Status__c</fullName>
    <description>Result of the last Square visit sync.</description>
    <label>Square Sync Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>